Further prep deluxe s2w wheel for activity

--- a/widgets/spin/index.html
+++ b/widgets/spin/index.html
@@ -237,38 +237,38 @@
 			</div>
 			<div id="wheelTileDeluxe" class="s2w-wheel-deluxe-hover">
 				<div class="wheel-element">
-					<div id="s2wBasicSlice1" class="wheel-slice wheel-slice-1 wheel-slice-trick"><p>COMING SOON!</p></div>
-					<div id="s2wBasicSlice2" class="wheel-slice wheel-slice-2 wheel-slice-trick-alt"><p>COMING SOON!</p></div>
-					<div id="s2wBasicSlice3" class="wheel-slice wheel-slice-3 wheel-slice-trick"><p>COMING SOON!</p></div>
-					<div id="s2wBasicSlice4" class="wheel-slice wheel-slice-4 wheel-slice-trick-alt"><p>COMING SOON!</p></div>
-					<div id="s2wBasicSlice5" class="wheel-slice wheel-slice-5 wheel-slice-trick"><p>COMING SOON!</p></div>
-					<div id="s2wBasicSlice6" class="wheel-slice wheel-slice-6 wheel-slice-trick-alt"><p>COMING SOON!</p></div>
-					<div id="s2wBasicSlice7" class="wheel-slice wheel-slice-7 wheel-slice-trick"><p>COMING SOON!</p></div>
-					<div id="s2wBasicSlice8" class="wheel-slice wheel-slice-8 wheel-slice-trick-alt"><p>COMING SOON!</p></div>
-					<div id="s2wBasicSlice9" class="wheel-slice wheel-slice-9 wheel-slice-trick"><p>COMING SOON!</p></div>
-					<div id="s2wBasicSlice10" class="wheel-slice wheel-slice-10 wheel-slice-trick-alt"><p>COMING SOON!</p></div>
-					<div id="s2wBasicSlice11" class="wheel-slice wheel-slice-11 wheel-slice-trick"><p>COMING SOON!</p></div>
-					<div id="s2wBasicSlice12" class="wheel-slice wheel-slice-12 wheel-slice-trick-alt"><p>COMING SOON!</p></div>
-					<div id="s2wBasicSlice13" class="wheel-slice wheel-slice-13 wheel-slice-trick"><p>COMING SOON!</p></div>
-					<div id="s2wBasicSlice14" class="wheel-slice wheel-slice-14 wheel-slice-trick-alt"><p>COMING SOON!</p></div>
-					<div id="s2wBasicSlice15" class="wheel-slice wheel-slice-15 wheel-slice-trick"><p>COMING SOON!</p></div>
-					<div id="s2wBasicSlice16" class="wheel-slice wheel-slice-16 wheel-slice-trick-alt"><p>COMING SOON!</p></div>
-					<div id="s2wBasicSlice17" class="wheel-slice wheel-slice-17 wheel-slice-trick"><p>COMING SOON!</p></div>
-					<div id="s2wBasicSlice18" class="wheel-slice wheel-slice-18 wheel-slice-trick-alt"><p>COMING SOON!</p></div>
-					<div id="s2wBasicSlice19" class="wheel-slice wheel-slice-19 wheel-slice-trick"><p>COMING SOON!</p></div>
-					<div id="s2wBasicSlice20" class="wheel-slice wheel-slice-20 wheel-slice-trick-alt"><p>COMING SOON!</p></div>
-					<div id="s2wBasicSlice21" class="wheel-slice wheel-slice-21 wheel-slice-trick"><p>COMING SOON!</p></div>
-					<div id="s2wBasicSlice22" class="wheel-slice wheel-slice-22 wheel-slice-trick-alt"><p>COMING SOON!</p></div>
-					<div id="s2wBasicSlice23" class="wheel-slice wheel-slice-23 wheel-slice-trick"><p>COMING SOON!</p></div>
-					<div id="s2wBasicSlice24" class="wheel-slice wheel-slice-24 wheel-slice-trick-alt"><p>COMING SOON!</p></div>
-					<div id="s2wBasicSlice25" class="wheel-slice wheel-slice-25 wheel-slice-trick"><p>COMING SOON!</p></div>
-					<div id="s2wBasicSlice26" class="wheel-slice wheel-slice-26 wheel-slice-trick-alt"><p>COMING SOON!</p></div>
-					<div id="s2wBasicSlice27" class="wheel-slice wheel-slice-27 wheel-slice-trick"><p>COMING SOON!</p></div>
-					<div id="s2wBasicSlice28" class="wheel-slice wheel-slice-28 wheel-slice-trick-alt"><p>COMING SOON!</p></div>
-					<div id="s2wBasicSlice29" class="wheel-slice wheel-slice-29 wheel-slice-trick"><p>COMING SOON!</p></div>
-					<div id="s2wBasicSlice30" class="wheel-slice wheel-slice-30 wheel-slice-trick-alt"><p>COMING SOON!</p></div>
-					<div id="s2wBasicSlice31" class="wheel-slice wheel-slice-31 wheel-slice-trick"><p>COMING SOON!</p></div>
-					<div id="s2wBasicSlice32" class="wheel-slice wheel-slice-32 wheel-slice-trick-alt"><p>COMING SOON!</p></div>
+					<div id="s2wDeluxeSlice1" class="wheel-slice wheel-slice-1 wheel-slice-trick"><p>COMING SOON!</p></div>
+					<div id="s2wDeluxeSlice2" class="wheel-slice wheel-slice-2 wheel-slice-trick-alt"><p>COMING SOON!</p></div>
+					<div id="s2wDeluxeSlice3" class="wheel-slice wheel-slice-3 wheel-slice-trick"><p>COMING SOON!</p></div>
+					<div id="s2wDeluxeSlice4" class="wheel-slice wheel-slice-4 wheel-slice-trick-alt"><p>COMING SOON!</p></div>
+					<div id="s2wDeluxeSlice5" class="wheel-slice wheel-slice-5 wheel-slice-trick"><p>COMING SOON!</p></div>
+					<div id="s2wDeluxeSlice6" class="wheel-slice wheel-slice-6 wheel-slice-trick-alt"><p>COMING SOON!</p></div>
+					<div id="s2wDeluxeSlice7" class="wheel-slice wheel-slice-7 wheel-slice-trick"><p>COMING SOON!</p></div>
+					<div id="s2wDeluxeSlice8" class="wheel-slice wheel-slice-8 wheel-slice-trick-alt"><p>COMING SOON!</p></div>
+					<div id="s2wDeluxeSlice9" class="wheel-slice wheel-slice-9 wheel-slice-trick"><p>COMING SOON!</p></div>
+					<div id="s2wDeluxeSlice10" class="wheel-slice wheel-slice-10 wheel-slice-trick-alt"><p>COMING SOON!</p></div>
+					<div id="s2wDeluxeSlice11" class="wheel-slice wheel-slice-11 wheel-slice-trick"><p>COMING SOON!</p></div>
+					<div id="s2wDeluxeSlice12" class="wheel-slice wheel-slice-12 wheel-slice-trick-alt"><p>COMING SOON!</p></div>
+					<div id="s2wDeluxeSlice13" class="wheel-slice wheel-slice-13 wheel-slice-trick"><p>COMING SOON!</p></div>
+					<div id="s2wDeluxeSlice14" class="wheel-slice wheel-slice-14 wheel-slice-trick-alt"><p>COMING SOON!</p></div>
+					<div id="s2wDeluxeSlice15" class="wheel-slice wheel-slice-15 wheel-slice-trick"><p>COMING SOON!</p></div>
+					<div id="s2wDeluxeSlice16" class="wheel-slice wheel-slice-16 wheel-slice-trick-alt"><p>COMING SOON!</p></div>
+					<div id="s2wDeluxeSlice17" class="wheel-slice wheel-slice-17 wheel-slice-trick"><p>COMING SOON!</p></div>
+					<div id="s2wDeluxeSlice18" class="wheel-slice wheel-slice-18 wheel-slice-trick-alt"><p>COMING SOON!</p></div>
+					<div id="s2wDeluxeSlice19" class="wheel-slice wheel-slice-19 wheel-slice-trick"><p>COMING SOON!</p></div>
+					<div id="s2wDeluxeSlice20" class="wheel-slice wheel-slice-20 wheel-slice-trick-alt"><p>COMING SOON!</p></div>
+					<div id="s2wDeluxeSlice21" class="wheel-slice wheel-slice-21 wheel-slice-trick"><p>COMING SOON!</p></div>
+					<div id="s2wDeluxeSlice22" class="wheel-slice wheel-slice-22 wheel-slice-trick-alt"><p>COMING SOON!</p></div>
+					<div id="s2wDeluxeSlice23" class="wheel-slice wheel-slice-23 wheel-slice-trick"><p>COMING SOON!</p></div>
+					<div id="s2wDeluxeSlice24" class="wheel-slice wheel-slice-24 wheel-slice-trick-alt"><p>COMING SOON!</p></div>
+					<div id="s2wDeluxeSlice25" class="wheel-slice wheel-slice-25 wheel-slice-trick"><p>COMING SOON!</p></div>
+					<div id="s2wDeluxeSlice26" class="wheel-slice wheel-slice-26 wheel-slice-trick-alt"><p>COMING SOON!</p></div>
+					<div id="s2wDeluxeSlice27" class="wheel-slice wheel-slice-27 wheel-slice-trick"><p>COMING SOON!</p></div>
+					<div id="s2wDeluxeSlice28" class="wheel-slice wheel-slice-28 wheel-slice-trick-alt"><p>COMING SOON!</p></div>
+					<div id="s2wDeluxeSlice29" class="wheel-slice wheel-slice-29 wheel-slice-trick"><p>COMING SOON!</p></div>
+					<div id="s2wDeluxeSlice30" class="wheel-slice wheel-slice-30 wheel-slice-trick-alt"><p>COMING SOON!</p></div>
+					<div id="s2wDeluxeSlice31" class="wheel-slice wheel-slice-31 wheel-slice-trick"><p>COMING SOON!</p></div>
+					<div id="s2wDeluxeSlice32" class="wheel-slice wheel-slice-32 wheel-slice-trick-alt"><p>COMING SOON!</p></div>
 				</div>
 			</div>
 		</div>
